--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="ui borderless menu">
+<div class="ui borderless main menu">
 <div class="ui container">
     <a class="fitted item">
       <i class="facebook f icon"></i>
@@ -39,5 +39,27 @@
       </div>
     </div>
   </div>
+<img class="ui centered small image" src="http://courses.ics.hawaii.edu/ics314s21/morea/ui-frameworks/experience-islandsnow-logo.png">
+<div class="ui borderless secondary menu">
+  <div class="ui centered grid container">
+    <a class="fitted item">
+      <div class="text"> MEN <i class="dropdown icon"></i></div>
+    </a>
+    <a class="fitted item">
+      <div class="text"> WOMEN <i class="dropdown icon"></i></div>
+    </a>
+    <a class="fitted item">
+      <div class="text"> KIDS <i class="dropdown icon"></i></div>
+    </a>
+    <a class="fitted item">
+      <div class="text"> BRANDS <i class="dropdown icon"></i></div>
+    </a>
+    <a class="fitted item">
+      <div class="text"> SEARCH </div>
+    </a>
+  </div>
+</div>
+     <img class="ui fluid image" src="http://courses.ics.hawaii.edu/ics314s21/morea/ui-frameworks/experience-islandsnow-video-snapshot.png">
+
 </body>
 </html>
