--- a/index.html
+++ b/index.html
@@ -60,6 +60,31 @@
   </div>
 </div>
      <img class="ui fluid image" src="http://courses.ics.hawaii.edu/ics314s21/morea/ui-frameworks/experience-islandsnow-video-snapshot.png">
-
+<div class="ui three column grid container">
+  <div class="column">
+    <p>About us</p>
+    <p>Store locations</p>
+    <p>Employment</p>
+    <p>Videos</p>
+    <p>Shipping & Returns</p>
+    <p>Terms & Conditions</p>
+    <p>Privacy Policy</p>
+  </div>
+  <div class="column">
+    <p>Men</p>
+    <p>Women</p>
+    <p>Kids</p>
+    <p>Brands</p>
+    <p>Sale</p>
+  </div>
+  <div class="column">
+    <p>Join our mailing list for updates</p>
+    <p>Sign up to receive our email updates</p>
+    <div class="ui action input">
+      <input type="text" placeholder="Enter email address">
+      <button class="ui join button">Join</button>
+    </div>
+  </div>
+</div>
 </body>
 </html>
